atualização de catálago

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h2>Em destaque</h2>
             <ul class="container-flex lista-veiculos">
                 <li>
-                    <img src="./imagens-icones/images/carro-bmw.png" alt="">
+                    <img src="./imagens-icones/images/carro-bmw.png" alt="Foto de um carro BMW">
                     <h3>Carro BMW</h3>
                     <p>
                         Câmbio automático, 4 portas, vidros e travas elétricas
@@ -76,24 +76,24 @@
                     <button type="button">Tenho interesse</button>
                 </li>
                 <li class="item-central">
-                    <img src="./imagens-icones/images/carro-bmw.png" alt="">
-                    <h3>Carro BMW</h3>
+                    <img src="./imagens-icones/images/fusca.png" alt="Foto de um fusca">
+                    <h3>Carro Fusca  Volkswagen</h3>
                     <p>
-                        Câmbio automático, 4 portas, vidros e travas elétricas
+                        Ano 1960, Motor Novo, Carroceria Original
                     </p>
                     <div class="price">
-                        <strong>75.000,00</strong>
+                        <strong>25.000,00</strong>
                     </div>
                     <button type="button">Tenho interesse</button>
                 </li>
                 <li>
-                    <img src="./imagens-icones/images/carro-bmw.png" alt="">
-                    <h3>Carro BMW</h3>
+                    <img src="./imagens-icones/images/moto-bmw.png" alt="Foto de uma moto BMW">
+                    <h3>Moto BMW</h3>
                     <p>
-                        Câmbio automático, 4 portas, vidros e travas elétricas
+                        1250cc, Esportiva
                     </p>
                     <div class="price">
-                        <strong>75.000,00</strong>
+                        <strong>62.000,00</strong>
                     </div>
                     <button type="button">Tenho interesse</button>
                 </li>
