menu-hamburguer atualizado

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                         <a href="#">Sobre</a>
                     </li>
                     <li>
-                        <a href="#">Em destaque</a>
+                        <a href="#destaque">Em destaque</a>
                     </li>
                     <li>
-                        <a href="#">Promoções</a>
+                        <a href="#promo">Promoções</a>
                     </li>
                     <li>
-                        <a href="#">Contato</a>
+                        <a href="#contato">Contato</a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +60,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="destaque">
         <div class="container">
             <h2>Em destaque</h2>
             <ul class="container-flex lista-veiculos">
@@ -79,7 +79,7 @@
                     <img src="./imagens-icones/images/fusca.png" alt="Foto de um fusca">
                     <h3>Carro Fusca  Volkswagen</h3>
                     <p>
-                        Ano 1960, Motor Novo, Carroceria Original
+                        Ano 1960, Motor Novo, Carroceria Original             
                     </p>
                     <div class="price">
                         <strong>25.000,00</strong>
@@ -123,7 +123,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="promo">
         <div class="container">
             <h2>Promoções</h2>
             <ul class="container-flex lista-veiculos">
